# KalkulatorPodatkowyJDG

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_PROMPT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PRD.md  QUICKSTART.md  README.md  RULES.md
.claude/: settings.local.json
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py
backend/app/api/: __init__.py  calculator.py
backend/app/core/: __init__.py  constants_2025.py
backend/app/domain/: __init__.py  health_insurance.py  linear_tax.py  lump_sum.py  tax_scale.py  zus.py
backend/app/schemas/: __init__.py  requests.py  responses.py
backend/app/services/: __init__.py  tax_calculator.py  time_utils.py
backend/app/storage/: __init__.py
backend/tests/: __init__.py  test_health_insurance.py  test_linear_tax.py  test_lump_sum.py  test_tax_scale.py  test_zus.py
examples/: README.md  example_request.json  example_response_summary.json  test_api.sh
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
